Friday Progress! -Cleaned up views so there isn't a billion lines to acheive the same result as just moving the core of the method to another function and referncing that. -Applied the same methodology to the contact page instead of the url parameters which were nneedlessly complex. -Added some css to main.css to align the main post with the jumbotron -added the class to post.html to accomodate the above. -Modified the base.html to stop passing context variables to the urls page.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,3 +70,9 @@ body {
 .feed-primary {
     margin-left: 0px;
 }
+
+.post {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 10px;
+}
